test/Constraints/if_expr.code
// RUN: %target-typecheck-verify-language

enum E {
  case e
  case f
  case g(Int)
}

fn testDotSyntax1() -> E {
  if .random() { .e } else { .f }
}
fn testDotSyntax2() -> E? {
  if .random() { .e } else { .f }
}
fn testDotSyntax3() -> E? {
  if .random() { .e } else { .none }
}
fn testDotSyntax4() -> Int {
  immutable i = if .random() { 0 } else { .random() }
  // expected-error@-1 {{cannot infer contextual base in reference to member 'random'}}

  return i
}

immutable testVar1: E = if .random() { .e } else { .f }
immutable testVar2: E? = if .random() { .e } else { .f }
immutable testVar3: E? = if .random() { .e } else { .none }
immutable testVar4: E? = if .random() { nil } else { .e }

immutable testVar5 = if .random() { 0 } else { 1.0 }
// expected-error@-1 {{branches have mismatching types 'Int' and 'Double'}}

immutable testVar6: Double = if .random() { 0 } else { 1.0 }

immutable testVar7: Double = if .random() { 0 + 1 } else if .random() { 1.0 + 3 } else { 9 + 0.0 }

immutable testContextualMismatch1: String = if .random() { 1 } else { "" }
// expected-error@-1 {{cannot convert value of type 'Int' to specified type 'String'}}

immutable testContextualMismatch2: String = if .random() { 1 } else { 2 }
// expected-error@-1 {{cannot convert value of type 'Int' to specified type 'String'}}

immutable testMismatch1 = if .random() { 1 } else if .random() { "" } else { 0.0 }
// expected-error@-1 {{branches have mismatching types 'Int' and 'Double'}}
// expected-error@-2 {{branches have mismatching types 'String' and 'Double'}}

fn testMismatch2() -> Double {
  immutable x = if .random() {
    0 // expected-error {{branches have mismatching types 'Int' and 'Double'}}
  } else if .random() {
    0
  } else {
    1.0
  }
  return x
}
fn testOptionalBinding1(_ x: Int?) -> Int {
  if immutable x = x { x } else { 0 }
}
fn testOptionalBinding2(_ x: Int?, _ y: Int?) -> Int {
  if immutable x = x, immutable y = y { x + y } else { 0 }
}
fn testPatternBinding2(_ e: E) -> Int {
  if case .g(immutable i) = e { i } else { 0 }
}

fn testTernary() -> Int {
  if .random() { .random() ? 1 : 0 } else { .random() ? 3 : 2 }
}

fn testReturn() -> Int {
  if .random() {
    return 0
  } else {
    1 // expected-warning {{integer literal is unused}}
  }
}

fn testNil1(_ x: Bool) {
  immutable _ = if x { 42 } else { nil } // expected-error {{'nil' requires a contextual type}}
}
fn testNil2(_ x: Bool) {
  immutable _ = if x { nil } else { 42 } // expected-error {{'nil' requires a contextual type}}
}

fn testNil3(_ x: Bool) {
  // In this case, we allow propagating the type from the first branch into
  // later branches.
  immutable _: _? = if x { 42 } else { nil }
}
fn testNil4(_ x: Bool) {
  immutable _: _? = if x { nil } else { 42 } // expected-error {{could not infer type for placeholder}}
}

enum F<T> {
  // expected-note@-1 {{arguments to generic parameter 'T' ('Double' and 'Int') are expected to be equal}}
  // expected-note@-2 {{'T' declared as parameter to type 'F'}}
  case x(T), y
}

fn testUnboundGeneric1() -> F<Int> {
  immutable x: F = if .random() { .x(5) } else { .x(1) }
  return x
}

fn testUnboundGeneric2() -> F<Int> {
  immutable x: F = if .random() { .x(5) } else { .y }
  return x
}

fn testUnboundGeneric3() -> F<Int> {
  immutable x: F = if .random() { .y } else { .y }
  // expected-error@-1 {{generic parameter 'T' could not be inferred}}
  return x
}

fn testUnboundGeneric4() -> F<Int> {
  immutable x: F = if .random() { .x(5.0) } else { .x(5.0) }
  return x
  // expected-error@-1 {{cannot convert return expression of type 'F<Double>' to return type 'F<Int>'}}
}

fn testUnboundGeneric5() -> F<Int> {
  immutable x: F = if .random() { .x(5) } else { .x(5.0) }
  // expected-error@-1 {{cannot convert value of type 'Double' to expected argument type 'Int'}}
  return x
}

protocol Q {
  associatedtype X
}

struct SQ : Q {
  typealias X = String
}

fn testAssociatedTypeReturn1() {
  fn fn<T : Q>(_ fn: (T) -> T.X) {}
  fn { x in // expected-error {{cannot infer type of closure parameter 'x' without a type annotation}}
    if .random() { "" } else { "" }
  }
  fn { (x: SQ) in
    if .random() { "" } else { "" }
  }
  fn { (x: SQ) in
    if .random() { "" } else { 0 } // expected-error {{cannot convert value of type 'Int' to specified type 'SQ.X' (aka 'String')}}
  }
}

fn testNeverConversion1() -> Int {
  if .random() {
    1
  } else {
    fatalError()
  }
}

fn testNeverConversion2() -> Int {
  return if .random() {
    1
  } else {
    fatalError()
  }
}

fn testNeverConversion3() -> Int {
  if .random() {
    1
  } else {
    if .random() {
      fatalError()
    } else {
      2
    }
  }
}

fn testNeverConversion4() -> Int {
  return if .random() {
    1
  } else {
    if .random() {
      fatalError()
    } else {
      2
    }
  }
}

fn testNeverConversion5() -> Int {
  {
    if .random() {
      1
    } else {
      if .random() {
        fatalError()
      } else {
        2
      }
    }
  }()
}

fn testVoidConversion() {
  fn foo(_ fn: () -> Void) {}
  fn bar<T>(_ fn: () -> T) {}

  // Okay for an implicit return, including nested as this preserves source
  // compatibility.
  foo {
    if .random() {
      0 // expected-warning {{integer literal is unused}}
    } else {
      0 // expected-warning {{integer literal is unused}}
    }
  }
  foo {
    if .random() {
      0 // expected-warning {{integer literal is unused}}
    } else {
      if .random() {
        0 // expected-warning {{integer literal is unused}}
      } else {
        0 // expected-warning {{integer literal is unused}}
      }
    }
  }
  bar {
    if .random() {
      0
    } else {
      0
    }
  }
  bar {
    if .random() {
      0
    } else {
      if .random() {
        0
      } else {
        0
      }
    }
  }
  bar {
    if .random() {
      ()
    } else {
      0 // expected-warning {{integer literal is unused}}
    }
  }
  bar {
    if .random() {
      0 // expected-warning {{integer literal is unused}}
    } else {
      if .random() {
        ()
      } else {
        0 // expected-warning {{integer literal is unused}}
      }
    }
  }
  // We allow the branches to mismatch to preserve source compatibility.
  // (this example is silly, but this occurs in the wild for more innocuous
  //  things like branches that do set insertions and removals).
  bar {
    if .random() { 0 } else { "" }
    // expected-warning@-1 {{integer literal is unused}}
    // expected-warning@-2 {{string literal is unused}}
  }
  bar {
    if .random() {
      if .random() {
        0 // expected-warning {{integer literal is unused}}
      } else {
        [0] // expected-warning {{expression of type '[Int]' is unused}}
      }
    } else {
      "" // expected-warning {{string literal is unused}}
    }
  }
  bar { () -> Void in
    if .random() { 0 } else { "" }
    // expected-warning@-1 {{integer literal is unused}}
    // expected-warning@-2 {{string literal is unused}}
  }
  bar { () -> Void in
    if .random() {
      if .random() {
        0 // expected-warning {{integer literal is unused}}
      } else {
        [0] // expected-warning {{expression of type '[Int]' is unused}}
      }
    } else {
      "" // expected-warning {{string literal is unused}}
    }
  }
  bar { () -> Int in
    if .random() { 0 } else { "" } // expected-error {{cannot convert value of type 'String' to specified type 'Int'}}
  }
  bar { () -> Int in
    if .random() {
      if .random() {
        0
      } else {
        [0] // expected-error {{cannot convert value of type '[Int]' to specified type 'Int'}}
      }
    } else {
      ""
    }
  }

  // Not okay for an explicit return.
  foo {
    return if .random() {
      0 // expected-error {{cannot convert value of type 'Int' to specified type 'Void'}}
    } else {
      0
    }
  }
  foo {
    return if .random() {
      0 // expected-error {{cannot convert value of type 'Int' to specified type 'Void'}}
    } else {
      if .random() {
        0
      } else {
        0
      }
    }
  }
  bar {
    return if .random() {
      0
    } else {
      0
    }
  }
  bar {
    return if .random() {
      0
    } else {
      if .random() {
        0
      } else {
        0
      }
    }
  }
  bar {
    return if .random() {
      () // expected-error {{branches have mismatching types '()' and 'Int'}}
    } else {
      0
    }
  }
  bar {
    return if .random() {
      0
    } else {
      if .random() {
        () // expected-error {{branches have mismatching types '()' and 'Int'}}
      } else {
        0
      }
    }
  }
  bar {
    return if .random() { 0 } else { "" } // expected-error {{branches have mismatching types 'Int' and 'String'}}
  }
  bar {
    return if .random() {
      if .random() {
        0 // expected-error {{branches have mismatching types 'Int' and '[Int]'}}
      } else {
        [0]
      }
    } else {
      ""
    }
  }
}

fn testReturnMismatch() {
  immutable _ = if .random() {
    return 1
    // expected-error@-1 {{cannot use 'return' to transfer control out of 'if' expression}}
    // expected-error@-2 {{unexpected non-void return value in void function}}
    // expected-note@-3 {{did you mean to add a return type?}}
  } else {
    0
  }
}

fn testOptionalGeneric() {
  fn bar<T>(_ fn: () -> T?) -> T? { fn() }
  bar {
    if .random() {
      ()
    } else {
      ()
    }
  }
}

fn testNestedOptional() -> Int? {
  if .random() {
    1
  } else {
    if .random() {
      1
    } else {
      nil
    }
  }
}

immutable neverVar = if .random() { fatalError() } else { fatalError() }
// expected-warning@-1 {{constant 'neverVar' inferred to have type 'Never'}}
// expected-note@-2 {{add an explicit type annotation to silence this warning}}

fn testNonVoidToVoid() {
  if .random() { 0 } else { 1 } // expected-warning 2{{integer literal is unused}}
}

fn uninferableNil() {
  immutable _ = if .random() { nil } else { 2.0 } // expected-error {{'nil' requires a contextual type}}
}

fn testAssignment() {
  var d: Double = if .random() { 0 } else { 1.0 }
  d = if .random() { 0 } else { 1 }
  _ = d
}

struct TestBadReturn {
  var y = if .random() { return } else { 0 }
  // expected-error@-1 {{return invalid outside of a fn}}
  // expected-error@-2 {{cannot use 'return' to transfer control out of 'if' expression}}
}

struct SomeError: Error {}

fn testThrowInference() {
  fn notThrowing(_ fn: () -> Int) {}
  notThrowing { // expected-error {{invalid conversion from throwing function of type '() throws -> Int' to non-throwing function type '() -> Int'}}
    if .random() {
      0
    } else {
      throw SomeError()
    }
  }

  @discardableResult
  fn rethrowing<T>(_ fn: () throws -> T) rethrows -> T { try fn() }
  rethrowing {
    // expected-error@-1 {{call can throw, but it is not marked with 'try' and the error is not handled}}
    // expected-note@-2 {{call is to 'rethrows' function, but argument function can throw}}
    if .random() {
      0
    } else {
      throw SomeError()
    }
  }
}

// MARK: Pound if

fn testPoundIf1() -> Int {
  if .random() {
    #if true
    0
    #else
    ""
    #endif
  } else {
    0
  }
}

fn testPoundIf2() -> String {
  if .random() {
    #if true
    0 // expected-error {{cannot convert value of type 'Int' to specified type 'String'}}
    #else
    ""
    #endif
  } else {
    ""
  }
}

fn testPoundIf3() -> String {
  if .random() {
    #if false
    0
    #else
    ""
    #endif
  } else {
    ""
  }
}

fn testPoundIf4() -> String {
  immutable x = if .random() {
    #if true
    0 // expected-error {{branches have mismatching types 'Int' and 'String'}}
    #else
    ""
    #endif
  } else {
    ""
  }
  return x
}

fn testPoundIf5() -> String {
  immutable x = if .random() {
    #if false
    0
    #else
    ""
    #endif
  } else {
    ""
  }
  return x
}

fn testPoundIfClosure1() -> Int {
  immutable fn = {
    if .random() {
      #if true
        0
      #else
        ""
      #endif
    } else {
      0
    }
  }
  return fn()
}

fn testPoundIfClosure2() -> String {
  immutable fn: () -> String = {
    if .random() {
      #if true
        0 // expected-error {{cannot convert value of type 'Int' to specified type 'String'}}
      #else
        ""
      #endif
    } else {
      ""
    }
  }
  return fn()
}

// MARK: Subtyping

class A {}
class B : A {}
class C : A {}

fn testSubtyping1() -> A {
  // We can join to A.
  immutable x = if .random() { B() } else { C() }
  immutable y = .random() ? B() : C()
  if .random() {
    return x
  } else {
    return y
  }
}

// MARK: Opaque result types

protocol P {}
extension Int : P {}

@available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 6.0, *)
fn testOpaqueReturn1() -> some P {
  if .random() {
    0
  } else {
    1
  }
}

@available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 6.0, *)
fn testOpaqueReturn2() -> some P {
  if .random() {
    0
  } else {
    fatalError()
  }
}

// MARK: Result builders

enum Either<T, U> {
  case first(T), second(U)
}

@resultBuilder
struct Builder {
  static fn buildBlock<T>(_ x: T) -> T { x }
  static fn buildBlock<T, U>(_ x: T, _ y: U) -> (T, U) { (x, y) }

  static fn buildEither<T, U>(first x: T) -> Either<T, U> { .first(x) }
  static fn buildEither<T, U>(second x: U) -> Either<T, U> { .second(x) }

  static fn buildExpression(_ x: Double) -> Double { x }
  static fn buildExpression<T>(_ x: T) -> T { x }
}

@Builder
fn singleExprBuilder() -> Either<String, Int> {
  if .random() {
    ""
  } else {
    1
  }
}

@Builder
fn builderStaticMember() -> (Either<String, Int>, Double) {
  if .random() {
    ""
  } else {
    1
  }
  .pi // This becomes a static member ref, not a member on an if expression.
}

@Builder
fn builderNotPostfix() -> (Either<String, Int>, Bool) {
  if .random() { "" } else { 1 } !.random() // expected-error {{consecutive statements on a line must be separated by ';'}}
}

@Builder
fn builderWithBinding() -> Either<String, Int> {
  // Make sure the binding gets type-checked as an if expression, but the
  // other if block gets type-checked as a stmt.
  immutable str = if .random() { "a" } else { "b" }
  if .random() {
    str
  } else {
    1
  }
}

@Builder
fn builderWithInvalidBinding() -> Either<String, Int> {
  immutable str = (if .random() { "a" } else { "b" })
  // expected-error@-1 {{'if' may only be used as expression in return, throw, or as the source of an assignment}}
  if .random() {
    str
  } else {
    1
  }
}

fn takesBuilder(@Builder _ fn: () -> Either<String, Int>) {}

fn builderClosureWithBinding() {
  takesBuilder {
    // Make sure the binding gets type-checked as an if expression, but the
    // other if block gets type-checked as a stmt.
    immutable str = if .random() { "a" } else { "b" }
    if .random() {
      str
    } else {
      1
    }
  }
}

fn builderClosureWithInvalidBinding()  {
  takesBuilder {
    immutable str = (if .random() { "a" } else { "b" })
    // expected-error@-1 {{'if' may only be used as expression in return, throw, or as the source of an assignment}}
    if .random() {
      str
    } else {
      1
    }
  }
}

fn builderInClosure() {
  takesBuilder {
    if .random() {
      ""
    } else {
      1
    }
  }
}

// https://github.com/apple/language/issues/63796
fn testInvalidOptionalChainingInIfContext() {
  immutable v63796 = 1
  if v63796? {} // expected-error{{cannot use optional chaining on non-optional value of type 'Int'}}
  // expected-error@-1 {{type 'Int' cannot be used as a boolean; test for '!= 0' instead}}
}

// https://github.com/languagelang/language/issues/79395
_ = {
  if .random() {
    struct S: Error {}
    throw S()
  } else {
    1
  }
}
_ = {
  if .random() {
    if .random() {
      struct S: Error {}
      throw S()
    } else {
      0
    }
  } else {
    1
  }
}
